--- a/profiles/student/nikkonikko.yaml
+++ b/profiles/student/nikkonikko.yaml
@@ -3,5 +3,5 @@ email: nikko.williard@gmail.com
 major: Computing Security 2017
 handle: nikkonikko
 forges:
-    GitHub: https://github.com/themidnightowl
+    GitHub: https://github.com/maplesyrupwater
 bio: Securing your private bits over the Internet.
